<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button

            android:id="@+id/upload_button"
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:background="@color/lightGray"
            android:padding="@dimen/default_margin"
            android:scaleType="centerCrop"
            android:text="@string/add_profil_page_name_upload_button"
            android:textColor="@color/white" />

        <ImageView

            android:id="@+id/preview_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/covid" />


    </LinearLayout>

    <EditText

        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_profil_page_name_input"
        android:padding="@dimen/default_margin"
        style=""
        />


    <EditText

        android:id="@+id/lastname_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_profil_page_lastname_input"
        android:padding="@dimen/default_margin"
        style=""
        />


    <EditText

        android:id="@+id/adresse_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_profil_page_adresse_input"
        android:padding="@dimen/default_margin"

        />




    <EditText

        android:id="@+id/contact_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_profil_page_contact_input"
        android:padding="@dimen/default_margin"

        />


    <EditText

        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/item_margin"
        android:hint="@string/add_profil_page_mail_input"
        android:padding="@dimen/default_margin"
        style="@style/Base.CardView"
        />
    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:text="@string/add_profil_page_confirm_button"
        android:textSize="24dp"
        android:textColor="@color/white"
        />

</LinearLayout>