<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginVertical="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:layout_marginVertical="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"/>

    <RadioButton
        android:id="@+id/radioButton1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_page_1_radios_oui"
        android:textColor="@color/black"
        android:textSize="@dimen/default_margin"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="170dp"
        android:text="@string/question_page_1_radios_non"
        android:textColor="@color/black"
        android:textSize="@dimen/default_margin"
        android:textStyle="bold" />

    <Button
        android:id="@+id/suivant"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:text="@string/question1_boutton"
        android:textColor="@color/white"
        android:textSize="24dp" />


</LinearLayout>