<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/horizontal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:src="@drawable/coronavirus"


        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_description"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_utility"
        android:layout_marginTop="@dimen/text_ecrit"
        android:layout_marginLeft="@dimen/text_ecrit"
        style="@style/Animation.Design.BottomSheetDialog"/>


    <Button
        android:id="@+id/button_commencer"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:text="@string/home_page_confirm_button"
        android:textColor="@color/white"
        android:textSize="24dp" />


</LinearLayout>