<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginVertical="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"/>




    <TextView
        android:layout_marginVertical="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_3"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"/>

    <TextView
        android:layout_width="70dp"
        android:layout_height="50dp"

        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        style="@style/TextAppearance.AppCompat.Title"/>

    <Button
        android:id="@+id/validé"
        android:layout_width="375dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:text="@string/question3_boutton"
        android:textColor="@color/white"
        android:textSize="24dp" />

</LinearLayout>